[package]
name = "workshop-eth-devp2p"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
k256 = { version = "0.13", features = ["ecdh", "ecdsa-core", "arithmetic"] }
rlp = "0.5.2"
byteorder = "1.4.3"
rand_core = "0.6.4"
hmac-sha256 = "1.1.6"
ctr = "0.9.2"
ecb = "0.1.1"
aes = "0.8.2"
sha3 = "0.10.8"
secp256k1 = { version = "0.28.1", features = ["recovery", "global-context", "rand-std"] }
snap = "1.1.0"
arrayvec = "0.5"
primitive-types = { version = "0.12.1", features = ["impl-rlp"] }
serde = { version = "1.0", features = ["derive"] }